--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -45,7 +45,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If this notebook is to be run on google colab, some extra steps should be taken to properly install the needed packages."
+    "If this notebook is to be run on google colab, some extra steps should be taken to properly install pytorch geometric.\n",
+    "Replace ```${CUDA}``` with the version used on your PyTorch installation as explained in the [pytorch geometric documentation](https://pytorch-geometric.readthedocs.io/en/latest/notes/installation.html)"
    ]
   },
   {
@@ -53,7 +54,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install torch-scatter==latest+${CUDA} -f https://pytorch-geometric.com/whl/torch-1.4.0.html\n",
+    "!pip install torch-sparse==latest+${CUDA} -f https://pytorch-geometric.com/whl/torch-1.4.0.html\n",
+    "!pip install torch-cluster==latest+${CUDA} -f https://pytorch-geometric.com/whl/torch-1.4.0.html\n",
+    "!pip install torch-spline-conv==latest+${CUDA} -f https://pytorch-geometric.com/whl/torch-1.4.0.html\n",
+    "!pip install torch-geometric\n",
+    "!pip install --upgrade git+https://github.com/AdelNabli/MCN"
+   ]
   },
   {
    "cell_type": "markdown",
