--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,12 +404,12 @@
    "metadata": {},
    "source": [
     "Formula applied to compute the optimality gap:\n",
-    "<h3 align=\"center\"> $ \\dfrac{\\sum_i |value_i^{true} - value_i^{heur}|}{\\sum_i value_i^{true}}$</h3>"
+    "<h3 align=\"center\"> $ \\dfrac{1}{n_{instance}} \\sum_{i=1}^{n_{instance}}\\dfrac{|value_i^{(true)} - value_i^{(heur)}|}{ value_i^{(true)}}$</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 6/6 [03:15<00:00, 37.73s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 6/6 [03:28<00:00, 40.24s/it]\n"
      ]
     }
    ],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -454,11 +454,11 @@
      "output_type": "stream",
      "text": [
       "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 1 : 0.000000\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 2 : 0.001976\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 1 , Lambda \\in [0, 2] : 0.007067\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 2 , Lambda \\in [0, 2] : 0.038576\n",
-      "optimality gap for instances with budget Omega = 1, Phi \\in [1, 2] , Lambda \\in [0, 2] : 0.034247\n",
-      "optimality gap for instances with budget Omega = 2, Phi \\in [1, 2] , Lambda \\in [0, 2] : 0.049020\n"
+      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 2 : 0.002711\n",
+      "optimality gap for instances with budget Omega = 0, Phi = 1 , Lambda \\in [0, 2] : 0.011546\n",
+      "optimality gap for instances with budget Omega = 0, Phi = 2 , Lambda \\in [0, 2] : 0.039157\n",
+      "optimality gap for instances with budget Omega = 1, Phi \\in [1, 2] , Lambda \\in [0, 2] : 0.035475\n",
+      "optimality gap for instances with budget Omega = 2, Phi \\in [1, 2] , Lambda \\in [0, 2] : 0.048743\n"
      ]
     }
    ],
@@ -475,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "optimality gap for the vaccinator :  0.04319654427645788\n",
-      "optimality gap for the attacker :  0.018826135105204873\n",
-      "optimality gap for the protector :  0.0012461059190031153\n"
+      "optimality gap for the vaccinator :  0.04210945513656357\n",
+      "optimality gap for the attacker :  0.02535140562248996\n",
+      "optimality gap for the protector :  0.001355421686746988\n"
      ]
     }
    ],
