--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -446,19 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 1 : 0.000000\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 2 : 0.002711\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 1 , Lambda \\in [0, 2] : 0.011546\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 2 , Lambda \\in [0, 2] : 0.039157\n",
-      "optimality gap for instances with budget Omega = 1, Phi \\in [1, 2] , Lambda \\in [0, 2] : 0.035475\n",
-      "optimality gap for instances with budget Omega = 2, Phi \\in [1, 2] , Lambda \\in [0, 2] : 0.048743\n"
+      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 1 : 0.000000 %\n",
+      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 2 : 0.271084 %\n",
+      "optimality gap for instances with budget Omega = 0, Phi = 1 , Lambda \\in [0, 2] : 1.154618 %\n",
+      "optimality gap for instances with budget Omega = 0, Phi = 2 , Lambda \\in [0, 2] : 3.915663 %\n",
+      "optimality gap for instances with budget Omega = 1, Phi \\in [1, 2] , Lambda \\in [0, 2] : 3.547545 %\n",
+      "optimality gap for instances with budget Omega = 2, Phi \\in [1, 2] , Lambda \\in [0, 2] : 4.874346 %\n"
      ]
     }
    ],
@@ -466,32 +466,32 @@
     "for k in range(Omega_max + Phi_max + Lambda_max):\n",
     "    budget = k + 1\n",
     "    if budget <= Lambda_max:\n",
-    "        print(\"optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = %d : %f\"%(budget, og_budget[k]))\n",
+    "        print(\"optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = %d : %f %%\"%(budget, og_budget[k]*100))\n",
     "    elif budget <= Lambda_max + Phi_max:\n",
-    "        print(\"optimality gap for instances with budget Omega = 0, Phi = %d , Lambda \\in [0, %d] : %f\"%(budget - Lambda_max, Lambda_max, og_budget[k]))\n",
+    "        print(\"optimality gap for instances with budget Omega = 0, Phi = %d , Lambda \\in [0, %d] : %f %%\"%(budget - Lambda_max, Lambda_max, og_budget[k]*100))\n",
     "    elif budget > Lambda_max + Phi_max:\n",
-    "        print(\"optimality gap for instances with budget Omega = %d, Phi \\in [1, %d] , Lambda \\in [0, %d] : %f\"%(budget - Lambda_max - Phi_max, Phi_max, Lambda_max, og_budget[k]))"
+    "        print(\"optimality gap for instances with budget Omega = %d, Phi \\in [1, %d] , Lambda \\in [0, %d] : %f %%\"%(budget - Lambda_max - Phi_max, Phi_max, Lambda_max, og_budget[k]*100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "optimality gap for the vaccinator :  0.04210945513656357\n",
-      "optimality gap for the attacker :  0.02535140562248996\n",
-      "optimality gap for the protector :  0.001355421686746988\n"
+      "optimality gap for the vaccinator : 4.210946 %\n",
+      "optimality gap for the attacker : 2.535141 %\n",
+      "optimality gap for the protector : 0.135542 %\n"
      ]
     }
    ],
    "source": [
-    "print(\"optimality gap for the vaccinator : \", og_player[0])\n",
-    "print(\"optimality gap for the attacker : \", og_player[1])\n",
-    "print(\"optimality gap for the protector : \", og_player[2])"
+    "print(\"optimality gap for the vaccinator : %f %%\" % (og_player[0]*100))\n",
+    "print(\"optimality gap for the attacker : %f %%\" % (og_player[1]*100))\n",
+    "print(\"optimality gap for the protector : %f %%\" % (og_player[2]*100))"
    ]
   },
   {
