--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -169,7 +169,11 @@
     "# Size of the validation set for each task\n",
     "size_validation_data = 50\n",
     "# path to the directory to pre-trained target nets\n",
-    "path_experts = \"\""
+    "path_experts = \"\"\n",
+    "# If resume training, set to True\n",
+    "resume_training = False\n",
+    "# path to the file containing the training parameters to load\n",
+    "path_train = \"\""
    ]
   },
   {
@@ -181,7 +185,7 @@
     "# Train the neural network\n",
     "value_net, experts = train_value_net(batch_size, memory_size, lr, betas, E, target_update, h1, h2, n_heads, alpha,\n",
     "                                     tolerance, n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max,\n",
-    "                                     size_validation_data, path_experts)"
+    "                                     size_validation_data, path_experts, resume_training, path_train)"
    ]
   },
   {
