--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,9 @@
     "# the number of attention heads in the GAT\n",
     "n_heads = 3\n",
     "# the 'skip connection' parameter in the APPNP part\n",
-    "alpha = 0.1"
+    "alpha = 0.1\n",
+    "# the dropout probability\n",
+    "p = 0.2"
    ]
   },
   {
@@ -146,30 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# batch size used\n",
-    "batch_size = 20\n",
-    "# Replay Memory size\n",
-    "memory_size = 256\n",
+    "batch_size = 256\n",
+    "# Size of training set\n",
+    "size_train_data = 100000\n",
+    "# Size of the validation set\n",
+    "size_val_data = 500\n",
     "# Learning rate of the optimizer\n",
     "lr = 1e-4\n",
     "# betas parameters of the optimizer\n",
     "betas = (0.8,0.9)\n",
-    "# Total number of episodes\n",
-    "E = 120000\n",
-    "# The period of checking whether the value net\n",
-    "# under training should be saved as an expert\n",
-    "target_update = 100\n",
-    "# Value of loss under which a value net is considered\n",
-    "# an expert for a task\n",
-    "tolerance = 0.2\n",
-    "# Size of the validation set for each task\n",
-    "size_validation_data = 50\n",
+    "# number of epoch\n",
+    "n_epoch = 60\n",
     "# path to the directory to pre-trained target nets\n",
-    "path_experts = \"\"\n",
+    "path_experts = None #\"models/colab/experts\"\n",
+    "# path to the directory containing the training and validation data\n",
+    "path_data = 'data'\n",
     "# If resume training, set to True\n",
     "resume_training = False\n",
     "# path to the file containing the training parameters to load\n",
@@ -183,9 +181,10 @@
    "outputs": [],
    "source": [
     "# Train the neural network\n",
-    "value_net, experts = train_value_net(batch_size, memory_size, lr, betas, E, target_update, h1, h2, n_heads, alpha,\n",
-    "                                     tolerance, n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max,\n",
-    "                                     size_validation_data, path_experts, resume_training, path_train)"
+    "train_value_net(batch_size, size_train_data, size_val_data, lr, betas, n_epoch, h1, h2, n_heads, alpha, p,\n",
+    "                n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max,\n",
+    "                num_workers=0, path_experts=path_experts, path_data=path_data, resume_training=resume_training,\n",
+    "                path_train=path_train)"
    ]
   },
   {
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +236,12 @@
     }
    ],
    "source": [
-    "G, J, Omega, Phi, Lambda = generate_random_instance(n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max)\n",
+    "instance = generate_random_instance(n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max)\n",
+    "G = instance.G\n",
+    "Omega = instance.Omega\n",
+    "Phi = instance.Phi\n",
+    "Lambda = instance.Lambda\n",
+    "J = instance.J\n",
     "# plots the graph\n",
     "plot_graph(G)\n",
     "# print the other parameters\n",
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +443,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 6/6 [03:28<00:00, 40.24s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 6/6 [02:28<00:00, 30.44s/it]\n"
      ]
     }
    ],
@@ -458,11 +462,11 @@
      "output_type": "stream",
      "text": [
       "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 1 : 0.000000 %\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 2 : 0.271084 %\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 1 , Lambda \\in [0, 2] : 1.154618 %\n",
-      "optimality gap for instances with budget Omega = 0, Phi = 2 , Lambda \\in [0, 2] : 3.915663 %\n",
-      "optimality gap for instances with budget Omega = 1, Phi \\in [1, 2] , Lambda \\in [0, 2] : 3.547545 %\n",
-      "optimality gap for instances with budget Omega = 2, Phi \\in [1, 2] , Lambda \\in [0, 2] : 4.874346 %\n"
+      "optimality gap for instances with budget Omega = 0, Phi = 0 , Lambda = 2 : 0.220884 %\n",
+      "optimality gap for instances with budget Omega = 0, Phi = 1 , Lambda \\in [0, 2] : 0.200803 %\n",
+      "optimality gap for instances with budget Omega = 0, Phi = 2 , Lambda \\in [0, 2] : 0.602410 %\n",
+      "optimality gap for instances with budget Omega = 1, Phi \\in [1, 2] , Lambda \\in [0, 2] : 4.195136 %\n",
+      "optimality gap for instances with budget Omega = 2, Phi \\in [1, 2] , Lambda \\in [0, 2] : 5.739169 %\n"
      ]
     }
    ],
@@ -479,16 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "optimality gap for the vaccinator : 4.210946 %\n",
-      "optimality gap for the attacker : 2.535141 %\n",
-      "optimality gap for the protector : 0.135542 %\n"
+      "optimality gap for the vaccinator : 4.967152 %\n",
+      "optimality gap for the attacker : 0.401606 %\n",
+      "optimality gap for the protector : 0.110442 %\n"
      ]
     }
    ],
@@ -497,13 +501,6 @@
     "print(\"optimality gap for the attacker : %f %%\" % (og_player[1]*100))\n",
     "print(\"optimality gap for the protector : %f %%\" % (og_player[2]*100))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
