--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -397,7 +397,7 @@
    ],
    "source": [
     "# create a test set named \"test_set.gz\" in the directory given (creates it if not existing)\n",
-    "generate_test_set(n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max, size_test_set=1000, directory_path='test_set')"
+    "generate_test_set(n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max, size_test_set=1000, directory_path='data/test_set')"
    ]
   },
   {
@@ -449,7 +449,7 @@
    ],
    "source": [
     "og_budget, og_player = compute_optimality_gap(Omega_max, Phi_max, Lambda_max,\n",
-    "                                              list_experts=list_experts, path_test_set=\"test_set/test_set.gz\")"
+    "                                              list_experts=list_experts, path_test_set=\"data/test_set/test_set.gz\")"
    ]
   },
   {
