add Attention Layer

--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -107,6 +107,11 @@
     "# It governs the range of graph's sizes we are considering\n",
     "n_free_min = 4\n",
     "n_free_max = 10\n",
+    "# d_edge controls the density of edge we want the instances\n",
+    "# to have. d_edge = 1. means that all possible edges are created\n",
+    "# i.e, we have a clique\n",
+    "d_edge_min = 0.05\n",
+    "d_edge_max = 0.3\n",
     "# Omega, Phi and Lambda are the budgets of the players\n",
     "# Phi_max should be >= 1, otherwise there is no MCN problem\n",
     "Omega_max = 2\n",
@@ -182,7 +187,7 @@
    "source": [
     "# Train the neural network\n",
     "train_value_net(batch_size, size_train_data, size_val_data, lr, betas, n_epoch, h1, h2, n_heads, alpha, p,\n",
-    "                n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max,\n",
+    "                n_free_min, n_free_max, d_edge_min, d_edge_max, Omega_max, Phi_max, Lambda_max,\n",
     "                num_workers=0, path_experts=path_experts, path_data=path_data, resume_training=resume_training,\n",
     "                path_train=path_train)"
    ]
@@ -236,7 +241,7 @@
     }
    ],
    "source": [
-    "instance = generate_random_instance(n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max)\n",
+    "instance = generate_random_instance(n_free_min, n_free_max, d_edge_min, d_edge_max, Omega_max, Phi_max, Lambda_max)\n",
     "G = instance.G\n",
     "Omega = instance.Omega\n",
     "Phi = instance.Phi\n",
@@ -397,7 +402,8 @@
    ],
    "source": [
     "# create a test set named \"test_set.gz\" in the directory given (creates it if not existing)\n",
-    "generate_test_set(n_free_min, n_free_max, Omega_max, Phi_max, Lambda_max, size_test_set=1000, directory_path='data/test_set')"
+    "generate_test_set(n_free_min, n_free_max, d_edge_min, d_edge_max, Omega_max, Phi_max, Lambda_max,\n",
+    "                  size_test_set=1000, directory_path='data/test_set')"
    ]
   },
   {
