--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,26 +106,25 @@
     "# that would be neither vaccinated, infected or attacked.\n",
     "# It governs the range of graph's sizes we are considering\n",
     "n_free_min = 9\n",
-    "n_free_max = 24\n",
+    "n_free_max = 14\n",
     "# d_edge controls the density of edge we want the instances\n",
     "# to have. d_edge = 1. means that all possible edges are created\n",
     "# i.e, we have a clique\n",
     "d_edge_min = 0.2\n",
-    "d_edge_max = 0.3\n",
+    "d_edge_max = 0.5\n",
     "# Omega, Phi and Lambda are the budgets of the players\n",
     "# Phi_max should be >= 1, otherwise there is no MCN problem\n",
-    "Omega_max = 2\n",
-    "Phi_max = 2\n",
-    "Lambda_max = 2\n",
-    "\n",
+    "Omega_max = 3\n",
+    "Phi_max = 3\n",
+    "Lambda_max = 3\n",
+    "w_max = 5\n",
     "weighted = False\n",
-    "w_max = 4\n",
     "directed = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +158,94 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 83%|█████████████████████████████████████████████████████████████████████▏             | 5/6 [13:10<03:15, 195.54s/it]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 9/9 [2:46:26<00:00, 1879.48s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weighted = True\n",
+    "directed = False\n",
+    "generate_test_set(n_free_min, n_free_max, d_edge_min, d_edge_max, Omega_max, Phi_max, Lambda_max,\n",
+    "                  weighted, w_max, directed, size_test_set=1000, to_torch=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================\n",
+      "Generates the test set... \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 9/9 [2:01:14<00:00, 1535.54s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weighted = False\n",
+    "directed = True\n",
+    "generate_test_set(n_free_min, n_free_max, d_edge_min, d_edge_max, Omega_max, Phi_max, Lambda_max,\n",
+    "                  weighted, w_max, directed, size_test_set=1000, to_torch=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================\n",
+      "Generates the test set... \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 9/9 [2:18:56<00:00, 1720.46s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weighted = False\n",
+    "directed = False\n",
+    "generate_test_set(n_free_min, n_free_max, d_edge_min, d_edge_max, Omega_max, Phi_max, Lambda_max,\n",
+    "                  weighted, w_max, directed, size_test_set=1000, to_torch=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================\n",
+      "Generates the test set... \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 9/9 [1:17:43<00:00, 891.41s/it]\n"
      ]
     }
    ],
