--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "L:\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "from MCN.MCN_curriculum.data import generate_test_set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|████████████████████████████████████████████████████                          | 6/9 [1:25:43<1:11:21, 1427.16s/it]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 9/9 [3:09:49<00:00, 2337.99s/it]\n"
      ]
     }
    ],
@@ -162,9 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================\n",
+      "Generates the test set... \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 9/9 [2:00:28<00:00, 1554.12s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "weighted = False\n",
     "directed = True\n",
@@ -174,9 +200,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================\n",
+      "Generates the test set... \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 9/9 [2:59:31<00:00, 2220.75s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "weighted = False\n",
     "directed = False\n",
