--- a/Usages.ipynb
+++ b/Usages.ipynb
@@ -729,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare the results of our heuristics on a publicaly available test set of increasingly larger instances. The test set was created for the original [*Multilevel Critical Node problem* paper]( http://cerc-datascience.polymtl.ca/wp-content/uploads/2017/11/Technical-Report_DS4DM-2017-012.pdf ) and is available at the following address: https://github.com/mxmmargarida/Critical-Node-Problem . We compare the time necessary to solve our problem with the best solver available, MCN$^{MIX}$."
+    "We compare the results of our heuristics on a publicaly available test set of increasingly larger instances. The test set was created for the original [*Multilevel Critical Node problem* paper]( http://cerc-datascience.polymtl.ca/wp-content/uploads/2017/11/Technical-Report_DS4DM-2017-012.pdf ) and is available at the following address: https://github.com/mxmmargarida/Critical-Node-Problem . We compare the time necessary to solve our problem with the best solver available, MCN$^{MIX}$. The results displayed here are slightly different from the ones in our paper as we use an other model to heuristicaly solve the instances."
    ]
   },
   {
